name:                servant-scalpel
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.9.0 && <4.10
                     , bytestring >=0.10.8 && <0.11
                     , http-media >=0.7.1 && <0.8
                     , scalpable >=0.0.0 && <0.1
                     , scalpel >=0.5.1 && <0.6
                     , servant >=0.14.1 && <0.15
  exposed-modules:     Servant.HTML.Scalpel
